--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h3 style="font-family: Helevetica; text-align: center;">Welcome to my CDN !</h3>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=320, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Vodkarm CDN</title>
+    <style>
+      a {
+        color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 style="font-family: Helevetica; text-align: center;">Welcome to my CDN !</h1>
+    <br><br><br>
+    
+    <h3 style="font-family: Helevetica;">Install PiP on Windows (<a href="files/pip.md">get-pip.py</a>)</h3>
+  </body>
+</html>
