--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
       a {
         color: red;
       }
+      h1 {
+        text-align: center;
+        font-family: Helevetica;
+      }
+      h3 {
+        font-family: Helevetica;
+      }
     </style>
   </head>
   <body>
-    <h1 style="font-family: Helevetica; text-align: center;">Welcome to my CDN !</h1>
+    <h1>Welcome to my CDN !</h1>
     <br><br><br>
     
-    <h3 style="font-family: Helevetica;">Install PiP on Windows (<a href="files/pip.md">get-pip.py</a>)</h3>
+    <h3>Install PiP on Windows (<a href="files/pip.md">get-pip.py</a>)</h3>
   </body>
 </html>
