--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         text-align: center;
         font-family: Helevetica;
       }
-      h3 {
+      body {
         font-family: Helevetica;
       }
     </style>
