--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <h1>Welcome to my CDN !</h1>
     <br><br><br>
     
-    <h3>Install PiP on Windows (<a href="files/pip.md">get-pip.py</a>)</h3>
+    <h3>Install PiP on Windows (<a href="files/pip.html">get-pip.py</a>)</h3>
   </body>
 </html>
