--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <br><br><br>
     
     <h3>Install PiP on Windows (<a href="files/pip.html">get-pip.py</a>)</h3>
+    <br>
+    <h3>Install Minecraft (<a href="files/mc_crack.html">cracked</a>)</h3>
   </body>
 </html>
